ログイン処理作成中。入力値とDBとで突き合わせる最低限の処理は作成したが、Cookieの扱いなどもっと考えたいことがある

--- a/views/login.pug
+++ b/views/login.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   //- actionで遷移先を指定する
+  p Message: #{message}
   form(method="post", action="/login")
     div
       input(type="text", name="userId")
