--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,10 @@ block content
       button(type="submit") 投稿
   h2 投稿一覧
   each post in posts
+    a(href=`/${post.id}/edit`) この投稿を編集する
     h3 #{post.id} : ID:#{post.trackingCookie}
     p #{post.content}
     p 投稿日時: #{post.createdAt}
+    
     hr
+    
