タイプミスの修正とスレッド一覧のタイムゾーン修正

--- a/views/thread.pug
+++ b/views/thread.pug
@@ -18,6 +18,7 @@ block content
     div(class="list-group")
       each thread in threads
           a(href=`/thread/${thread.threadId}` class="list-group-item") 
-            p #{thread.title}
-            p 作成日時: #{thread.createdAt}
+            p 作成日時: #{thread.formattedCreatedAt}
+            font(size="5") #{thread.title}
+            
       
