--- a/views/posts.pug
+++ b/views/posts.pug
@@ -35,7 +35,7 @@ block content
           //- pugに名前が変わった際にパラメータを埋め込む際の書き方が変わった
           if user && post.postedBy === user.id
             a(href=`/thread/${threadId}/${post.id}/edit`) 編集  
-          p #{index + 1} : Posted by #{post.User.name}  #{post.formattedCreateAt}
+          p #{index + 1} : Posted by #{post.User.name}  #{post.formattedCreatedAt}
           p #{post.content}
           if post.filePath
             a(href=`/${post.filePath}`) 
