つけ忘れていたalt属性を追記

--- a/views/favorites.pug
+++ b/views/favorites.pug
@@ -19,4 +19,4 @@ block content
           p #{favorite.Post.content}
           if favorite.Post.filePath
             a(href=`/${favorite.Post.filePath}`) 
-              img(src=`/${favorite.Post.filePath}` class="img-responsive")
+              img(src=`/${favorite.Post.filePath}` class="img-responsive" alt="")
