--- a/views/posts.pug
+++ b/views/posts.pug
@@ -44,5 +44,5 @@ block content
           p #{post.content}
           if post.filePath
             a(href=`/${post.filePath}`) 
-              img(src=`/${post.filePath}` class="img-responsive")
+              img(src=`/${post.filePath}` class="img-responsive" alt="")
 
