--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,25 @@
 extends layout
 
 block content
-  a(href="/posts") 投稿一覧へ
-
-    
+  
+ h1 About
+ 
+ p    本アプリケーションはNode.js と Expressで作成した掲示板です。<br>
+   |   以下の機能を実装しております。<br><br>
+   |  [認証機能]<br>
+   |  ・ログイン・ログアウト機能<br>
+   |  [検索機能]<br>
+   |  ・スレッド検索機能<br>
+   |  ・投稿検索機能<br>
+   |  [投稿機能]<br>
+   |  ・スレッドの作成機能<br>
+   |  ・投稿の作成・更新・削除機能<br>
+   |  ・画像アップロード機能<br>
+   |  ・投稿のJSON形式のエクスポート機能<br>
+   |  [いいね機能]<br>
+   |  ・マイクロポストに対するfavorite の登録・解除<br>
+   |  ・ユーザが登録したfavoriteの一覧<br>
+   |  <br>
+   |  [開発期間] <br>
+   |  ・2週間 <br>
+   
