ファイル選択ダイアログにて、画像ファイルのみが表示されるよう修正

--- a/views/newThread.pug
+++ b/views/newThread.pug
@@ -12,6 +12,6 @@ block content
         div(class="form-group") 投稿内容
           textarea(name="content" class="form-control" required)
         div(class="form-group") .jpg or .png
-          input(type="file" name="imageFile" class="btn btn-default")
+          input(type="file" name="imageFile" class="btn btn-default" accept=".jpg,.png,image/jpg,image/jpeg,image/png")
         div(class="form-group")
           button(type="submit" class="btn btn-primary") スレッドを作成
