--- a/views/posts.pug
+++ b/views/posts.pug
@@ -11,7 +11,7 @@ block content
           div(class="form-group")
             textarea(name="content" class="form-control" placeholder="投稿内容" required)
           div(class="form-group") .jpg or .png
-            input(type="file" name="imageFile" class="btn btn-default")
+            input(type="file" name="imageFile" class="btn btn-default" accept=".jpg,.png,image/jpg,image/jpeg,image/png")
           div(class="form-group")
             button(type="submit" class="btn btn-primary") 投稿
 
