--- a/views/thread.pug
+++ b/views/thread.pug
@@ -18,7 +18,7 @@ block content
     div(class="list-group")
       each thread in threads
         a(href=`/thread/${thread.threadId}/posts` class="list-group-item") 
-          p 作成日時: #{thread.formattedCreatedAt}  ROW_NUM: #{thread.dataValues['rowNum']}
+          p 作成日時: #{thread.formattedCreatedAt}
           font(size="5") #{thread.title}
             
       
