user登録機能にバリデーションを追加し、リンクを追加

--- a/views/login.pug
+++ b/views/login.pug
@@ -14,3 +14,4 @@ block content
           input(type="password" name="password" class="form-control" placeholder="パスワード" required)
         div(class="form-group")
           button(type="submit" class="btn btn-lg btn-primary btn-block btn-signin") Login
+      a(href='/users/register') sign up
