--- a/views/newUser.pug
+++ b/views/newUser.pug
@@ -2,13 +2,19 @@ extends layout
 
 block content
 
-  p #{message}
-  form(method="post", action="/users/register")
-    div
-      input(type="text", name="id")
-    div
-      input(type="text", name="name")
-    div
-      input(type="password", name="password")
-    div
-      button(type="submit") 登録
+  div(class="panel panel-default col-md-4 col-md-offset-4")
+    div(class="panel-body")
+    if message
+      div(class="form-group")
+      Label #{message}
+    form(method="post", action="/users/register")
+      div(class="form-group")
+        input(type="text" name="id" class="form-control" placeholder="ユーザID" required autofocus)
+      div(class="form-group")
+        input(type="text" name="name" class="form-control" placeholder="ユーザ名" required)
+      div(class="form-group")
+        input(type="password" name="password" class="form-control" placeholder="パスワード" required)
+      div(class="form-group")
+        input(type="password" name="confirmPassword" class="form-control" placeholder="パスワード確認" required)
+      div(class="form-group")
+        button(type="submit" class="btn btn-lg btn-primary btn-block btn-signin") 登録
